[build-system]
requires = [
	"flit_core >=3.2,<4",
	"python_version >='3.7'"
	]
build-backend = "flit_core.buildapi"

[project]
name = "Project 6- Hidden Markov Model"
authors = [{name = "Rochel Munitz", email = "Rochel.Munitz@ucsf.edu"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
dependencies = [
    "pytest", "numpy" 
]

[project.urls]
Home = ""